# ML2_project_JaneStreet

./: Data.ipynb  pyproject.toml  ruff.toml
Files/: preprocessing_explanation.md
Julien_Code/: main.py
Julien_Code/Helper/: callbacks.py  data_processing.py  dataset.py  preprocessing.py  timing.py
Julien_Code/Model/: MoiraiFinetuneBase.py  finetune.py  model.py
Roland_Code/: jane-street-market-data.ipynb
