[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gluonts==0.14.3",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "tokenizers>=0.21.1",
    "torch==2.3.1",
    "transformers>=4.52.4",
    "uni2ts[notebook]",
]

[tool.uv.sources]
uni2ts = { path = "uni2ts_repo", editable = true }
